# eighttrigrams-tutorials

./: .gitignore  README.md
examples/: add-1.clj  add-2.clj  hello.clj
examples/adder/src/: adder.clj
examples/clojure/adder/: deps.edn
examples/clojure/deps_greeter/application/: deps.edn
examples/clojure/lein_adder/: project.clj
examples/clojure/lein_adder/test/: adder_test.clj
examples/greeter-1/src/: greeter.clj
examples/greeter-2/application/: deps.edn
examples/greeter-2/application/src/: hello.clj
examples/greeter-2/src/: hello.clj
examples/greeter-3/: project.clj
examples/greeter-3/src/clj/: hello.clj
examples/greeter-3/src/java/: Greeter.java
examples/greeter_1/src/: hello.clj
examples/greeter_2/src/: hello.clj
examples/greeter_2/src/greeter/: greeter.clj
examples/haskell/: functions.hs  hello.hs
examples/haskell/cmodules/: CHANGELOG.md  cmodules.cabal
examples/haskell/debugging/: dbg.hs  dbg2.hs
examples/haskell/external_modules/: main.hs
examples/haskell/hunit_testing/: CHANGELOG.md  MyTestSuite.hs  hunit-testing.cabal
examples/haskell/main_module/: Main.hs  MyModule.hs
examples/haskell/modules1/: MyModule.hs  go.hs
examples/haskell/qualified_imports/: main.hs
examples/haskell/separate_src_and_test/: CHANGELOG.md  separate-src-and-test.cabal
examples/haskell/separate_src_and_test/src/: Main.hs
examples/haskell/separate_src_and_test/test/: MyTestSuite.hs
examples/haskell/submodules/: main.hs
examples/haskell/submodules/MyModule/: MyModule.hs  MySubModule.hs
examples/lein-adder/: project.clj
