cabal-version:      2.4
name:               hunit-testing
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dan
maintainer:         dan@eighttrigrams.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

test-suite my-test-suite
  type:                exitcode-stdio-1.0
  main-is:             MyTestSuite.hs
  build-depends:       base >=4.13 && <4.18
                     , HUnit
  default-language:    Haskell2010