cabal-version:      2.4
name:               separate-src-and-test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dan
maintainer:         dan@eighttrigrams.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable main
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.13 && <=4.18
  default-language:    Haskell2010
  other-modules:       MyModule

test-suite my-test-suite
  type:                exitcode-stdio-1.0
  main-is:             MyTestSuite.hs
  hs-source-dirs:      src, test
  build-depends:       base >=4.13 && <=4.18
                     , HUnit
  default-language:    Haskell2010
  other-modules:       MyModule